# fMRI-Data-Management-and-Progress-Tracking

./: .gitignore  CHANGELOG.md  README.md  fmri_qc.db  pyproject.toml
src/: cli.py
src/fMRI_Data_Management/: __init__.py  main.py
src/fMRI_Data_Management/config/: __init__.py  constants.py  database_schema.py  task_output_checks.yaml
src/fMRI_Data_Management/dash_app/: __init__.py  app.py
src/fMRI_Data_Management/dash_app/callbacks/: __init__.py  data_callbacks.py  detail_callbacks.py  export_callbacks.py  filter_callbacks.py  import_callbacks.py  modal_callbacks.py  notes_callbacks.py  stats_callbacks.py  tag_callbacks.py
src/fMRI_Data_Management/dash_app/layouts/: __init__.py  components.py  main_layout.py  modals.py
src/fMRI_Data_Management/database/: __init__.py  audit_operations.py  base.py  qc_operations.py  table_operations.py
src/fMRI_Data_Management/utils/: __init__.py  analysis_results_check.py  data_processing.py  file_operations.py  plots.py  validators.py
tests/: behavioral_wave1.csv  behavioral_wave2.csv  change_mock_db_time.py  data_simulation.py  mock_behavioral_data.csv  mock_qc_data.csv  qc_wave1.csv  qc_wave2.csv  test.py
